--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "it is a beginner level rental app ",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js --name my-app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yusuf saify",
